# loc-responsible-datasets

./: .gitignore  README.md
01_bills/: DataCard.md  README.md  get_congress_bills_source_list.py  get_page_bills_data.py  pyproject.toml
01_bills/01_retrieval/: 01_get_congress_bills_source_pages.py  02_get_page_bills_data.py  03_create_source_data_report.py  README.md  create_bill_status_dataframes.py  create_page_status_dataframes.py  get_congress_bills_source_pages.py  ray_get_congress_bills.py  ray_get_congress_bills_source_pages.py  ray_get_congress_range_bills.py  ray_get_page_bills_data.py  ray_update_source_pages_subfield_status.py  status_reporting.ipynb
01_bills/01_retrieval/utils/: api.py  fetch_store.py  location.py  status.py
01_bills/02_gathering/: 01_get_compiled_subjects_dataframe.py  02_get_compiled_subjects_with_text_dataframe.py  03_concatenate_dataframes.py  03_concatinate_dataframes.py  README.md
01_bills/02_gathering/utils/: dataframe.py
01_bills/03_profiling/: .gitignore  01_general_profiling_visualization.ipynb  02_stastistical_profiling_visualization.ipynb  03_post_resampling_stat_profiling_visualization.ipynb  README.md  general_profiling_visualization.ipynb  stastistical_profiling_visualization.ipynb
01_bills/03_profiling/utils/: general.py  statistical.py
01_bills/04_mitigating_imbalance/: .gitignore  README.md  apply_multiple_resampling.py  apply_resampling.py  config.py
01_bills/04_mitigating_imbalance/utils/: resampler.py
01_bills/utils/: loc_bills_api.py
