[project]
name = "loc-responsible-datasets-01-bills"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fsspec>=2025.2.0",
    "ipywidgets>=8.1.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "ray[default]>=2.42.1",
    "requests>=2.32.3",
    "s3fs>=2025.2.0",
    "seaborn>=0.13.2",
    "typer>=0.15.1",
]
